New webby spiderman

--- a/codenation.html
+++ b/codenation.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Samuel's Website</title>
 </head>
 <body>
-    
+    <div class="navbar">
+        <a href="index.html" target="">Home</a> -
+        <a href="aboutme.html" target="">About Me</a> - 
+        <a href="work.html" target="">My Work</a> -
+        <a href="gallery.html" target="">Gallery</a> -
+        <a href="mypage.html" target="">My Page</a>
+    </div>
+
+    <h1>Codenation Coursework</h1>
+
+    <div id="cnlogo">
+        <img src="images/codenationlogo.png" title="Codenation Logo">
+    </div>
+    <h2>Website Development</h2>
+<li id="unit1">Unit 1</li>
+<li id="unit2">Unit 2</li>
+</ul>
 </body>
+<footer>
+    This is my footer
+</footer>
 </html>
