--- a/mypage.html
+++ b/mypage.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samuel's Website</title>
+    <title>Sams Website</title>
 </head>
 <body>
     <div class="navbar">
@@ -14,16 +14,19 @@
         <a href="gallery.html" target="">Gallery</a> -
         <a href="mypage.html" target="">My Page</a>
     </div>
-    <h1>My Work</h1>
+    <h1>My personal page</h1>
     
-    <div class="picmiddle">
-        <img src="images/workingme.jpg" title="Me taking photographic evidence for my college course">
+    <div id="recruitteam">
+        <img src="images/recruitsquad.jpg" title="Recruit 5 man squad">
     </div>
-    <div class="worklink">
-        <a href="codenation.html" target="">Codenation Coursework
 
-        </a>
+<div id="acevideo">
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/9eY7TwWZ5cM?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+    <!-- <video src="http://www.youtube.com/watch?v=9eY7TwWZ5cM&t=6s" width="1280px" height="auto" controls>Video not supported **this doesn't work properly*-->
+    </video>
     </div>
+
 </body>
 <footer>
     This is my footer
