--- a/aboutme.html
+++ b/aboutme.html
@@ -4,14 +4,15 @@
     <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Samuel's Website</title>
 </head>
 <body>
     <div class="navbar">
         <a href="index.html" target="">Home</a> -
         <a href="aboutme.html" target="">About Me</a> - 
         <a href="work.html" target="">My Work</a> -
-        <a href="gallery.html" target="">Gallery</a>
+        <a href="gallery.html" target="">Gallery</a> -
+        <a href="mypage.html" target="">My Page</a>
     </div>
 
     <h1>About Me</h1>
