--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <a href="index.html" target="">Home</a> -
         <a href="aboutme.html" target="">About Me</a> -
         <a href="work.html" target="">My Work</a> - 
-        <a href="gallery.html" target="">Gallery</a>
+        <a href="gallery.html" target="">Gallery</a> -
+        <a href="mypage.html" target="">My Page</a>
     </div>
 
     <h1>Welcome To My Website</h1>
