--- a/mypage.html
+++ b/mypage.html
@@ -21,8 +21,8 @@
     </div>
 
 <div id="acevideo">
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/9eY7TwWZ5cM?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
+    <iframe width="1280" height="720" src="https://www.youtube.com/embed/9eY7TwWZ5cM?list=PLw9l23e0izgtNslF5D_xqmvFupMOKCjhn&autoplay=1&loop=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <!-- <video src="http://www.youtube.com/watch?v=9eY7TwWZ5cM&t=6s" width="1280px" height="auto" controls>Video not supported **this doesn't work properly*-->
     </video>
     </div>
