--- a/codenation.html
+++ b/codenation.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samuel's Website</title>
 </head>
-<body>
+<body class="backgroundcolour">
     <div class="navbar">
         <a href="index.html" target="">Home</a> -
         <a href="aboutme.html" target="">About Me</a> - 
         <a href="work.html" target="">My Work</a> -
         <a href="gallery.html" target="">Gallery</a> -
         <a href="mypage.html" target="">My Page</a>
-    </div>
+    </div><br>
 
     <h1>Codenation Coursework</h1>
 
