--- a/mypage.html
+++ b/mypage.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sams Website</title>
 </head>
-<body>
-    <div class="navbar">
+<body id="personalpage">
+    <div class="navbar" class="opacity1">
         <a href="index.html" target="">Home</a> -
         <a href="aboutme.html" target="">About Me</a> -
         <a href="work.html" target="">My Work</a> -
         <a href="gallery.html" target="">Gallery</a> -
         <a href="mypage.html" target="">My Page</a>
-    </div>
-    <h1>My personal page</h1>
+    </div><br>
+    <h1 class="opacity1">My personal page</h1>
     
     <div id="recruitteam">
         <img src="images/recruitsquad.jpg" title="Recruit 5 man squad">
@@ -27,6 +27,118 @@
     </video>
     </div>
 
+    <div id="cardstable">
+        <table style="width:100%">
+            <tr>
+              <th>Card No.</th>
+              <th>Spades</th>
+              <th>Diamonds</th>
+              <th>Clubs</th>
+              <th>Hearts</th>
+            </tr>
+            <tr>
+                <td>Ace</td>
+              <td>Waterfall/30 card pickup</td>
+              <td>Skip a go/ Crawl on a floor or lie on a floor and pretend you’re a slug for 10 seconds</td>
+              <td>Watch a BG Kumbi video you laugh you drink/TV drinking</td>
+              <td>1v1/2v2</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Send two drinks/snake eyes</td>
+                <td>Watch a postman pat YTP video you laugh you drink/watch a pewdiepie try not to laugh</td>
+                <td>Find Bot, kill Bot, loser drinks/1v1 Uno</td>
+                <td>Make another player do an impression/do an impression of the other person</td>
+                <tr>
+                    <td>3</td>
+                    <td>Drink 3 large gulps/Shuffle beer mat game and pick a random one</td>
+                    <td>Watch a Michael Rosen YTP video you laugh you drink/Criken’s skyrim video.</td>
+                    <td>Hide and seek with bots, if found, drink/hide and seek with each other</td>
+                    <td>Do ten push ups or sit ups/Find the teddy, place plush into a hiding spot, if the other player finds it within 5 minutes drink 3 large gulps</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Categories/truth or dare</td>
+                    <td>Watch a horror conspiracy ghost story thats real or seems it/walk outside and say something random or skyrim reference, preferably a dank meme phrase (can be your own funny catchphrase)</td>
+                    <td>Play an MLG game every time you die drink, loser finishes drink/play a 1v1 with each other, knives (melee) only (perks allowed?)</td>
+                    <td>Make some one draw a picture/ Obtain a picture (can be taken using camera) and make a meme out of it, if it’s acceptable, post on facebook, otherwise just keep it for a try not to laugh challenge</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Never have I ever (3 fingers)/one big  chicken (tongue twister)</td>
+                    <td>Pick any card remove it/watch a Youtube video of players choice and make a rule</td>
+                    <td>Zombies, drink each round/drink every time you buy anything or get downed</td>
+                    <td>Make out with something (for 10 seconds)/you have around 10 pieces of paper (can be sticky notes) and you have to create a real life easter egg for your opponent to discover anywhere in the house (it can’t be buried under something impossible and the rules and a hint to the first note has to be stated, they have 30 minutes to figure it out</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Everyone takes drinks/card tower</td>
+                    <td>You have to listen for 10 minutes of noises, can be sex or animal or meme videos, you laugh you drink, the opponent creates a scenario for you, i.e desert island and what items you have and you need, you must go onto youtube and search tutorials for how to obtain it, howtobasic has to be implemented, whoever laughs drinks</td>
+                    <td>6v6 S&D loser drinks rounds lost/QSNS 1v1</td>
+                    <td>Walk like an opposite sex/walk like an animal</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Drink your drink for 5 seconds/black or red</td>
+                    <td>You look exhausted from the game, choose a relaxing or hypnotic video/watch a video on how to drink safely and try not to laugh</td>
+                    <td>Build a race map, loser drinks/worms every worm lost drink </td>
+                    <td>Tell someone to do something and where/pull stupid faces for about 10 seconds</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Bathroom pass, everytime you wish to go to the toilet, you must ask in a silly childish way and voice/ Impersonate someone funny, if other player laughs, they drink otherwise you drink</td>
+                    <td>Facebook Dank memes/ Message a random person on facebook and say something random</td>
+                    <td>1v1 halo/survival mw3 down drink</td>
+                    <td>Silly group photo/ Go onto Omegle and do something funny the other player chooses</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Rhyme/poker loser drinks)/obstacle course if the situation meets the requirements </td>
+                    <td>Mix both players drinks and divide it, even if horrible 3 gulps/do the most random thing you can think of as fast as you can</td>
+                    <td>Legendary LASO, die you drink/fire fight game mode each time generator lost drink or death</td>
+                    <td>Finish drink/have a fag if just had one or don’t want one take 3 gulps</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Say something you’ve never done any player that has  drinks/You have to swap names with the other person and reverse their name, you have 2 lives, last life is regular swapped name</td>
+                    <td>Watch over a two minute not to laugh video or drink/ Listen to Justin Bieber or anything cancerous</td>
+                    <td>All Bot try to kill you run/play Fifa </td>
+                    <td>make animal impressions loudly/ Sam has to cover a new song, adri sings backing vocals, card drawers choice which song</td>
+                </tr>
+                <tr>
+                    <td>Jack</td>
+                    <td>No touching your head/Drinking Buddy</td>
+                    <td>Play your favourite song and shuffle/play a 10 minute dank meme video laugh drink</td>
+                    <td>Play Xbox game of your choice/play 3 online multiplayer games of choice</td>
+                    <td>The drunkest drink/sir drinkalot</td>
+                </tr>
+                
+                <tr>
+                    <td>Queen</td>
+                    <td>Question master 3 questions cant answer yes or no/play catch with snacks or something, who drops it drinks best of 3</td>
+                    <td>Sing a song someone else chooses/ Listen to my songs without laughing</td>
+                    <td>Play swbf2/ Game of Battle Royale, every potion drank, damage you take, healing items consumed and death you drink, every kill the other person drinks</td>
+                    <td>Waterfall/The Narcissus rule (compliment yourself and have the other person compliment you whenever  you drink)</td>
+                </tr>
+                <tr>
+                    <td>King</td>
+                    <td>Make a rule it is law/beer blow</td>
+                    <td>Watch a 10 hour video, first person to laugh drinks/watch fail army and whoever goes oooh or ouch drinks</td>
+                    <td>Players choice/play a game on solo for 10 minutes</td>
+                    <td>Make everything you say sound like a question mark is at the end of it/you have 5-10 minutes to read and learn a magic trick and then to perform it</td>
+                </tr>
+
+            <tr> 
+                <td>Joker</td>
+                <td>Do a legendary mission on halo/shuffle a list of every game installed and whichever one appears on top is the game selection for the next 15 minutes, players choice if they wish to use any game rules for the game</td>
+                <td>Survival game slenderman or outlast etc.. until you die or complete it, you get 15 minutes/ do a roblox map of decided choice for 10 minutes</td>
+                <td>You have precisely 5 minutes to build a house in minecraft on creative with a selected amount of blocks, once timer is up get inside and use selected weapons to survive a spam of zombies (monsters) breaking down your doors/Choose any vs game, can be racing, shooter etc.. and try to win or have shot </td>
+                <td>Plants vs zombies, every plant to be destroyed is a drink, loss is a shot/battle royale search for the legendary uncommon weapon (both choose before game) once legendary is found, you can kill opponent but no running, no building or health kits, only allowed to use vehicles for travelling fast and shoot the gun to kill. Rule applies to both once both has the weapon and rules stated before game to avoid confusion i.e perks, shields, health kits, additional items</td>
+            </tr>
+
+            </tr>
+          </table>
+    </div>
 </body>
 <footer>
     This is my footer
