--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Samuel's Website</title>
  </head>
 
-<body>
+<body class="backgroundcolour">
   
     
     <div class="navbar">
@@ -17,7 +17,7 @@
         <a href="work.html" target="">My Work</a> - 
         <a href="gallery.html" target="">Gallery</a> -
         <a href="mypage.html" target="">My Page</a>
-    </div>
+    </div><br>
 
     <h1>Welcome To My Website</h1>
 
