--- a/aboutme.html
+++ b/aboutme.html
@@ -21,6 +21,13 @@
     <img src="images/balconypic.jpg" title="Me stood on a balcony in Barcelona">
 </div>
 
+<p>
+    My name is Samuel and reason why I chose to enroll on the Codenation course is because I have a huge
+    passion for technology, I originally studied computing & IT in college and chose the software development 
+    path as website development is the one thing I wish to continue as a career, a dream job. I hope that one
+    day in the near future I will be at the skill level to know what to do independently and not need assistance
+    for every advanced feature.
+</p>
 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
