--- a/aboutme.html
+++ b/aboutme.html
@@ -8,11 +8,11 @@
 </head>
 <body class="backgroundcolour">
     <div class="navbar">
-        <a href="index.html" target="">Home</a> -
-        <a href="aboutme.html" target="">About Me</a> - 
-        <a href="work.html" target="">My Work</a> -
-        <a href="gallery.html" target="">Gallery</a> -
-        <a href="mypage.html" target="">My Page</a>
+        <a class= "navfont" href="index.html" target="">Home</a> -
+        <a class= "navfont" href="aboutme.html" target="">About Me</a> - 
+        <a class= "navfont" href="work.html" target="">My Work</a> -
+        <a class= "navfont" href="gallery.html" target="">Gallery</a> -
+        <a class= "navfont" href="mypage.html" target="">My Page</a>
     </div><br>
 
     <h1>About Me</h1>
