--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <link rel="stylesheet"
      <link rel="stylesheet" type="text/css" href="main.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,11 +11,11 @@
   
     
     <div class="navbar">
-        <a href="index.html" target="">Home</a> -
-        <a href="aboutme.html" target="">About Me</a> -
-        <a href="work.html" target="">My Work</a> - 
-        <a href="gallery.html" target="">Gallery</a> -
-        <a href="mypage.html" target="">My Page</a>
+        <a class= "navfont" href="index.html" target="">Home</a> -
+        <a class= "navfont" href="aboutme.html" target="">About Me</a> -
+        <a class= "navfont" href="work.html" target="">My Work</a> - 
+        <a class= "navfont" href="gallery.html" target="">Gallery</a> -
+        <a class= "navfont" href="mypage.html" target="">My Page</a>
     </div><br>
 
     <h1>Welcome To My Website</h1>
