--- a/codenation.html
+++ b/codenation.html
@@ -19,12 +19,13 @@
     <h1>Codenation Coursework</h1>
 
     <div id="cnlogo">
+
         <img src="images/codenationlogo.png" title="Codenation Logo">
     </div>
     <h2>Website Development</h2>
     <div class="assignment">
-    <li id="unit1link"><u>Unit 1</u></li>
-    <li id="unit2link"><u>Unit 2</u></li>
+    <li id="unit1link"><u><a href="#unit1">Unit 1</a></u></li>
+    <li id="unit2link"><u><a href="#unit2">Unit 2</a></u></li>
 </div>
 
 <h1> HTML & CSS Assignment Brief</h1>
@@ -246,11 +247,13 @@
      <br><br>
       You need to also ask if it meets the requirements set for the project, whether it’s set by yourself or a customer, it still should have requirements set for good practice. Once this is tested it should be tested from an external computer if it is online (opposed to just one computer). If all the requirements are met and all the required testing is successful then it should all be good to go.</p>
  <h3><u>References</u></h3>
-   <p>[1] https://www.trustradius.com/products/visual-studio-ide/reviews?qs=pros-and-cons</p>
+   <p><a href="https://www.trustradius.com/products/visual-studio-ide/reviews?qs=pros-and-cons">[1]https://www.trustradius.com/products/visual-studio-ide/reviews?qs=pros-and-cons</a></p>
 </div>
 
+     <br>
+     <br>
 
-<div id="unit2">
+     <div id="unit2">
 <h2><u>Unit 2</u></h2>
 <h2><u>Outcome 1</u></h2>
    <p>Create structures and styles for a webpage</p>
@@ -302,11 +305,11 @@
       [3] https://www.peernet.com/pdf-benefits-for-business/</p>
 </div>
 
-
-</body>
 <footer>
     This is my footer
 </footer>
+</body>
+
 </html>
 
 
