needs additional things

--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,13 @@
     <div class="picmiddle">
         <img src="images/balconypic.jpg" title="Me stood on a balcony in Barcelona">
         <img src="images/skateboardcover.jpg" title="Me stood on a balcony in Barcelona">
+        <br>
+        <img src="images/workingme.jpg" title="Me stood on a balcony in Barcelona">
+        <img src="images/balconypic.jpg" title="Me stood on a balcony in Barcelona">
+        <img src="images/skateboardcover.jpg" title="Me stood on a balcony in Barcelona">
+        <img src="images/workingme.jpg" title="Me stood on a balcony in Barcelona">
+        <img src="images/balconypic.jpg" title="Me stood on a balcony in Barcelona">
+        <img src="images/skateboardcover.jpg" title="Me stood on a balcony in Barcelona">
         <img src="images/workingme.jpg" title="Me stood on a balcony in Barcelona">
     </div>
 <footer>
