Added some images and text
Replacing lorum ipsum with real words

--- a/aboutme.html
+++ b/aboutme.html
@@ -22,27 +22,25 @@
 </div>
 
 <p>
-    My name is Samuel and reason why I chose to enroll on the Codenation course is because I have a huge
-    passion for technology, I originally studied computing & IT in college and chose the software development 
-    path as website development is the one thing I wish to continue as a career, a dream job. I hope that one
-    day in the near future I will be at the skill level to know what to do independently and not need assistance
-    for every advanced feature.
+    Hello readers my name is Samuel and the reason why I chose to enroll on the Codenation course is because I have a huge
+    passion for technology, ever since I grew up, I have always been fascinated by computers and understanding how
+    they worked when I watched my Dad and friends use them. I originally studied computing & IT in college and chose the software 
+    development path as website development is the one thing I wish to continue as a career, a dream job. 
 </p>
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-    Excepteur sint occaecat cupidatat non proident, 
-    sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
+<br>
+<p>I hope that one day in the near future I will be at the skill level to know what to do independently and not need assistance
+    for every advanced feature I wish to use. My plan for now is to look for either training or an Apprenticeship to get all the required skills I need
+    to be able to stand on my own two feet. Once I have all the skill levels required for independancy I will
+    look to work in a big business like Microsoft or Google.</p><br>
     
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-        voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, 
-        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>I also have a huge passion for Gaming and Music so I am highly considering making a business of developing
+        websites for gamers and musicians who wish to advertise themselves online and maybe get some recognition out of it
+    </p>
+
+    <p>My Hobbies that I like to do in my spare time are Gaming, Skateboarding and playing the Guitar. I am a massive fan
+        of Zombie related things whether it be in Games or Films/TV Shows etc.. and I love Horror related things that give
+        me a good jump scare to get my adrenaline going and feel alive. 
+    </p>
 
 <footer>
     This is my footer
