--- a/gallery.html
+++ b/gallery.html
@@ -18,15 +18,14 @@
 
     <div class="picmiddle">
         <img src="images/balconypic.jpg" title="Me stood on a balcony in Barcelona">
-        <img src="images/skateboardcover.jpg" title="Me stood on a balcony in Barcelona">
+        <img src="images/skateboardcover.jpg" title="A picture of me doing a Tre-Flip on my Skateboard">
         <br>
-        <img src="images/workingme.jpg" title="Me stood on a balcony in Barcelona">
-        <img src="images/balconypic.jpg" title="Me stood on a balcony in Barcelona">
-        <img src="images/skateboardcover.jpg" title="Me stood on a balcony in Barcelona">
-        <img src="images/workingme.jpg" title="Me stood on a balcony in Barcelona">
-        <img src="images/balconypic.jpg" title="Me stood on a balcony in Barcelona">
-        <img src="images/skateboardcover.jpg" title="Me stood on a balcony in Barcelona">
-        <img src="images/workingme.jpg" title="Me stood on a balcony in Barcelona">
+        <img src="images/workingme.jpg" title="Me doing my College work">
+        
+        <div class="picportrait">
+        <img src="images/meouteating.jpg" title="Me out eating with my Girlfriend">
+        <img src="images/sadsquash.jpg" title="A sad face I drew onto a butternut squash and then named it Sadsquash">
+        <img src="images/duckfamily.jpg" title="A photo of a family of ducks that I took walking along the canal"> </div>
     </div>
 <footer>
     This is my footer
