--- a/index.html
+++ b/index.html
@@ -25,21 +25,14 @@
     </div>
 
     
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-    ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-    voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-    Excepteur sint occaecat cupidatat non proident, 
-    sunt in culpa qui officia deserunt mollit anim id est laborum.</p><br>
+    <p>Hello and welcome to my website, I have made this as a project for my CodeNation course I enrolled onto. This
+    website will be used as my Online Portfolio that I will use to display my work and skills off to any jobs I apply for.
+    As of right now this website is very basic but functional, which once day I hope to change that and improve it to
+    its full potential.</p><br>
     
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
-        ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in 
-        voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, 
-        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>From the course I have completed I feel much more confident in Website Development with HTML & CSS and I feel like
+        I can move onto the next step towards my main goal now I have learned the basics.
+    </p>
 
 <footer>
     This is my footer
