--- a/work.html
+++ b/work.html
@@ -20,9 +20,7 @@
         <img src="images/workingme.jpg" title="Me taking photographic evidence for my college course">
     </div>
     <div class="worklink">
-        <a href="codenation.html" target="">Codenation Coursework
-
-        </a>
+        <a href="codenation.html" target="">Codenation Coursework</a>
     </div>
 <footer>
     This is my footer
